--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html ng-app="todoist">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, inital-scale=1">
   <title>Todo list</title>
+
+  <link rel="stylesheet" href="bootstrap link.css" >
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+
+  <script src="js/jquery.js"></script>
+  <script src="js/angular.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
