--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,26 @@
 </head>
 <body>
 
+<form>
   <div class="row">
-    <div class="large-12 columns">
-      <div class="panel">
-        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
-        <div class="row">
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <p><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-          </div>
-        </div>
+    <div class="large-4 columns">
+      <label>My todo list
+        <input type="text" placeholder="What are you doing today?" />
+      </label>
+      <label>Due Date:
+        <input type="date" />
+      </label>
+      <div class="checkbox">
+        <label>Done:
+          <input type="checkbox">
+        </label>
       </div>
-    </div>
   </div>
+</form>
 
   <script src="js/vendor/jquery.js"></script>
-  <script src="js/foundation.js"></script>
-  <script src="js/angular.js"></script>
+  <script src="js/foundation/foundation.js"></script>
+  <!--<script src="js/vendor/angular.js"></script>-->
   <script src="js/app.js"></script>
 </body>
 </html>
