code for controller

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="todoist">
+<html ng-app="todo">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, inital-scale=1">
@@ -31,7 +31,7 @@
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/foundation/foundation.js"></script>
-  <!--<script src="js/vendor/angular.js"></script>-->
+  <script src="js/vendor/angular.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
