--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 
             <!-- BIND THIS VALUE TO formData.text IN ANGULAR -->
             <input type="text" class="form-control input-lg text-center" placeholder="I want to buy a puppy that will love me forever" ng-model="formData.text">
-
+            <input type="date" ng-model="formData.dueDate">
 
           </div>
 
