--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <div class="checkbox" ng-repeat="todo in todos">
           <label>
             <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
-            {{todo.dueDate | date :"medium"}}
+            {{todo.dueDate}}
           </label>
         </div>
 
